# StockScope

./: .gitignore  LICENSE  README.md  pyproject.toml  sandBox.py
planning/: plan-getStockData.prompt.md  plan-stockScope.prompt.md
src/stockscope/: __init__.py  data.py
tests/: test_stockscope.py
